resource/networkpolicy/networkpolicy-test-exporter.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: networkpolicy-test-exporter
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: test-exporter
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - ipBlock:
        cidr: 192.168.0.0/16
        except:
        - 192.168.155.252/32
    # - namespaceSelector:
    #     matchLabels:
    #       project: myproject
    # - podSelector:
    #     matchLabels:
    #       role: frontend
    ports:
    - protocol: TCP
      port: 10000
  # egress:
  # - to:
  #   - ipBlock:
  #       cidr: 10.0.0.0/24
  #   ports:
  #   - protocol: TCP
  #     port: 5978
